@@ -8,6 +8,7 @@ BUG: Ticket#167 - TSecurityManager issues warning when trying to encrypt/decrypt
 BUG: Ticket#169 - Validation of subclass of THtmlArea/TDatePicker fails (Wei)
 BUG: Ticket#179 - CGI incompatibility causing clientscripts.php failure (Qiang)
 BUG: Ticket#181 - Unable to change Content-Type in response header if charset is not set (Qiang)
+BUG: Ticket#200 - onClick javascript event triggered twice on CheckBox label (Qiang)
 ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
 ENH: Ticket#152 - constituent parts of TWizard are exposed (Qiang)
 ENH: added sanity check to calling event handlers (Qiang)
